# subcheck-termux-ubuntu

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  china_optimized.sh  config.yaml  config_example.yaml  correct_subcheck.sh  deploy_vps.sh  enhanced_main.sh  enhanced_subcheck.sh  init.sh  install_deps.sh  install_xray.sh  main.sh  mobile_check.sh  network_speedtest.sh  onekey_install.sh  package.json  ping_test.sh  pyproject.toml  quick_test.sh  requirements.txt  run.sh  simple_china_test.sh  simple_test.sh  simple_test.txt  subcheck.sh  subcheck_complete.sh  subcheck_optimized.sh  termux_scheduler.sh  termux_setup.sh  test_nodes.txt  ultra_simple_speedtest.sh  vps_test.sh
config/: config.yaml
docs/: INSTALL.md  PROJECT_STRUCTURE.md  README.md  USAGE.md
scripts/: enhanced_parse.sh  enhanced_test.sh  install.sh  parse.sh  quick_start.sh  test.sh  test_node.sh
scripts/legacy/: debug_subcheck.sh  optimal_subcheck.sh  simple_subcheck.sh  subcheck.sh  subcheck_complete.sh
src/: format_converter.js  network_tester.py  optimized_network_tester.py  subscription_parser.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  config_manager.py
src/utils/: __init__.py
