[project]
name = "subcheck-termux-ubuntu"
version = "1.0.0"
description = "SubCheck订阅测速工具 - Termux Ubuntu版本"
authors = [{name = "SubCheck Team"}]
dependencies = [
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
    "urllib3>=1.26.0"
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []